# web-blog-app

./: pyproject.toml
web_blog/blog/: admin.py  models.py  serializer.py  urls.py  views.py
web_blog/blog/migrations/: 0001_initial.py
web_blog/web_blog/: ckeditor_configs.py  settings.py  urls.py
