[tool.poetry]
name = "web-blog-app"
version = "0.1.0"
description = ""
authors = ["Asad F <theavenger1712@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
djangorestframework = "^3.15.1"
django-ckeditor = "^6.7.1"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
